--- a/gatsbyTemplate.yaml
+++ b/gatsbyTemplate.yaml
@@ -27,6 +27,9 @@ Resources:
             Value: !Ref EnvConfigghostContentApiKeyAsString
           - Name: SITEURL
             Value: !GetAtt gatsbyCDN.DomainName
+
+          - Name: NODE_ENV
+            Value: 'production'
       ServiceRole: !GetAtt gatsbyBuildRole.Arn
       Source:
         Type: NO_SOURCE
